FullQa New/src/ZoomInfo/objects/ZoomInfo_Custom_Settings__c.object
<CustomObject>
    <description>ZoomInfo App Custom Settings. Make sure only Administrators have write access on this object.</description>
    <fields>
        <fullName>Account_FMC_Persist_Search__c</fullName>
        <defaultValue>true</defaultValue>
        <description>a field to define is search persistance will exist between searches in FMC</description>
        <label>Account FMC Persist Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_FMC_Tab_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Find More Contacts Tab on Account Panel</description>
        <inlineHelpText>Disable Find More Contacts Tab on Account Panel</inlineHelpText>
        <label>Account FMC Tab Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Mapping__c</fullName>
        <label>Account_Mapping</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Overview_Tab_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Overview Tab on Account Panel</description>
        <inlineHelpText>Disable Overview Tab on Account Panel</inlineHelpText>
        <label>Account Overview Tab Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Mapping__c</fullName>
        <label>Contact_Mapping</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Overview_Tab_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Overview Tab on Contact Panel</description>
        <inlineHelpText>Disable Overview Tab on Contact Panel</inlineHelpText>
        <label>Contact Overview Tab Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Web_Mentions_Tab_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Web Mentions Tab on Contact Panel</description>
        <inlineHelpText>Disable Web Mentions Tab on Contact Panel</inlineHelpText>
        <label>Contact Web Mentions Tab Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Web_Mentions_as_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make Web Mentions the Default Tab on Contact Panel</description>
        <inlineHelpText>Make Web Mentions the Default Tab on Contact Panel</inlineHelpText>
        <label>Contact Web Mentions as Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Check_For_Duplicated_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this checkbox to disable check for potential duplicates when importing Accounts, Contacts and Leads. Only applies to records imported through ZoomInfo Salesforce Application.</description>
        <inlineHelpText>Check this checkbox to disable check for potential duplicates when importing Accounts, Contacts and Leads. Only applies to records imported through ZoomInfo Salesforce Application.</inlineHelpText>
        <label>Disable Check for Potential Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Find_More_Contacts_as_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make Find More Contacts the Default Tab on Account Panel</description>
        <inlineHelpText>Make Find More Contacts the Default Tab on Account Panel</inlineHelpText>
        <label>Account Find More Contacts as Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Mapping__c</fullName>
        <label>Lead_Mapping</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Overview_Tab_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Overview Tab on Lead Panel</description>
        <inlineHelpText>Disable Overview Tab on Lead Panel</inlineHelpText>
        <label>Lead Overview Tab Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Web_Mentions_Tab_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Web Mentions Tab on Lead Panel</description>
        <inlineHelpText>Disable Web Mentions Tab on Lead Panel</inlineHelpText>
        <label>Lead Web Mentions Tab Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Web_Mentions_as_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make Web Mentions the Default Tab on Lead Panel</description>
        <inlineHelpText>Make Web Mentions the Default Tab on Lead Panel</inlineHelpText>
        <label>Lead Web Mentions as Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping__c</fullName>
        <label>Mapping</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Match_Duplicate_Leads_in_FMC__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match Duplicate Leads in FMC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <description>Enter 18 character Profile ID to set preferences for a specific profile. Enter Global to set preferences for everyone. Profile level preferences will overwrite Global preferences.</description>
        <inlineHelpText>Enter 18 character Profile ID to set preferences for a specific profile. Enter Global to set preferences for everyone. Profile level preferences will overwrite Global preferences.</inlineHelpText>
        <label>Profile ID or Global</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_url__c</fullName>
        <label>SSO url</label>
        <length>2083</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Tab_Company_Search_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Company Search Option on ZoomInfo Tab</description>
        <inlineHelpText>Disable Company Search Option on ZoomInfo Tab</inlineHelpText>
        <label>ZoomInfo Tab Company Search Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Tab_Company_Search_as_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make Company Search the Default on ZoomInfo Tab</description>
        <inlineHelpText>Make Company Search the Default on ZoomInfo Tab</inlineHelpText>
        <label>ZoomInfo Tab Company Search as Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Tab_People_Search_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable People Search Option on ZoomInfo Tab</description>
        <inlineHelpText>Disable People Search Option on ZoomInfo Tab</inlineHelpText>
        <label>ZoomInfo Tab People Search Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contributer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>contributer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token_expire_time__c</fullName>
        <label>token expire time</label>
        <type>DateTime</type>
    </fields>
    <label>ZoomInfo Custom Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomInfo Custom Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>